--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -23,6 +23,10 @@ jobs:
         uses: actions/checkout@v2
       - name: Composer install jigsaw and all requirements
         uses: php-actions/composer@v5
+        with:
+          dev: no
+          php_version: 7.2
+          version: 1
       - name: Install curl, unzip, rsync and openssh-client
         run: apt-get update && apt-get install -y curl openssh-client rsync unzip
       - name: Install composer
