Updated deployment steps. Updated readme with manual deployment code. Added a TODO to the README.md

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -28,13 +28,13 @@ jobs:
           php_version: 7.2
           version: 1
       - name: Build site files
-        run: ./vendor/bin/jigsaw build production
+        run: ./vendor/bin/jigsaw build production -q
       - name: Rsync to server
         uses: burnett01/rsync-deployments@4.1
         with:
           switches: -avzr --delete
-          path: public_html/
-          remote_path: /var/www/clivewalkden.co.uk/html/
+          path: /github/workspace/public_html/
+          remote_path: /var/www/clivewalkden.co.uk/html
           remote_host: 35.202.238.191
           remote_user: clivewalkden
           remote_key: ${{ secrets.DEPLOY_KEY }}
