--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "require": {
         "tightenco/jigsaw": "^1.3",
-        "samdark/sitemap": "^2.2"
+        "samdark/sitemap": "^2.2",
+        "nesbot/carbon": "^2.53"
     },
     "autoload": {
         "psr-4": {
