--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     },
     "devDependencies": {
         "laravel-mix": "6.0.43",
-        "laravel-mix-jigsaw": "2.0.0",
+        "laravel-mix-jigsaw": "^1.5.0",
         "postcss": "8.4.6",
         "postcss-import": "^14.0.0",
         "tailwindcss": "2.2.19"
