--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "require": {
     "tightenco/jigsaw": "^1.3",
     "nesbot/carbon": "^2.53",
-    "clivewalkden/jigsaw-sitemap": "^1.1",
+    "clivewalkden/jigsaw-sitemap": "1.1.1",
     "ext-json": "*"
   },
   "autoload": {
