Changed - Updated sitemap module from v1.1.1 to v1.2.0 - Blog article date now shown in the author space near the bottom - Added left right icons to blog previous/next post links - Added cloud icon to about page - SEO meta updates - Illuminate framework updates
Fixed
- SEO issues detected in screaming frog
- Styling issues with breadcrumbs
- Image cateogry 404's
- Page 404's added to redirects
- Spelling fixes and updates
- Date format in rich snippets
- Page H1 now not my name for everything

--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
   "require": {
-    "tightenco/jigsaw": "^1.3.45",
+    "tightenco/jigsaw": "~1.3.45",
     "nesbot/carbon": "^2.53",
-    "clivewalkden/jigsaw-sitemap": "1.1.1",
+    "clivewalkden/jigsaw-sitemap": "^1.2",
     "ext-json": "*"
   },
   "autoload": {
