--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,10 @@
     "psr-4": {
       "App\\Listeners\\": "listeners/"
     }
+  },
+  "config": {
+    "platform": {
+      "php": "7.4.33"
+    }
   }
 }
